src/test/deca/syntax/valid/custom/while/while_instance.deca
// Description:
//   While with condition instanceof.
// Results:
//
//
// History:
//    created on 13/01/2022

{
   while (a instanceof b) {
        i = i + 1;
   }
}
