src/test/deca/syntax/invalid/custom/object/while_instance.deca
// Description:
//   While with condition instanceof.
// Results:
//
//
// History:
//    created on 13/01/2022

{
   while (a instancef b) {
        i = i + 1;
   }
}
